<resources>
    <string name="app_name">校汇</string>
    <string name="campus">校园</string>
    <string name="task">任务</string>
    <string name="topic">校汇圈</string>
    <string name="store">小店铺</string>
    <string name="mine">我</string>
    <string name="hint_exit_app">再点一次退出</string>
    <string name="company_url">www.feibu.info</string>
    <string name="company_name">&#169; 广州飞步信息科技有限公司</string>
    <string name="hint_phone_number">手机号码</string>
    <string name="hint_password">密码</string>
    <string name="login">登录</string>
    <string name="login_forget_password"><u>忘记密码？</u></string>
    <string name="register_account"><u>注册帐号</u></string>
    <string name="request_failure">请求失败</string>
    <string name="login_failure">登录失败</string>
    <string name="network_noconnected">网络连接失败</string>
    <string name="discovery">— 发现 —</string>
    <string name="campus_assn">校园社团</string>
    <string name="chicken_soup">秘制鸡汤</string>
    <string name="net_fault">网络报障</string>
    <string name="phone_no_register">此手机号还未加入校汇</string>
    <string name="veritycode_failure">验证码输入错误</string>
    <string name="changepwd_success">修改成功，请用新密码登录</string>
    <string name="login_exception">登录异常，请重新登录</string>
    <string name="input_pwd_failure">输入旧密码错误</string>
    <string name="upload_certifition_success">上传成功，请等待结果</string>
    <string name="upload_success">上传成功</string>
    <string name="change_success">更换成功</string>
    <string name="bind_success">绑定成功</string>
    <string name="set_success">设置成功</string>
    <string name="withdrawal_success">您的提现申请已提交，我们会尽快给您转账，请您耐心等待！</string>
    <string name="lets_go">Let\'s Go</string>
    <string name="first_into">先逛逛</string>
    <string name="first_login">登录</string>
    <string name="close">关闭</string>
    <string name="dialog_cancel">取消</string>
    <string name="permission_dlg_title">权限申请提醒</string>
    <string name="permission_dlg_content">为了保证软件功能正常运行，需要您授予以下权限：\n</string>
    <string name="permission_dlg_file">.存储信息</string>
    <string name="permission_dlg_camera">.照相机</string>
    <string name="permission_dlg_phone">.手机信息</string>
    <string name="permission_dlg_negative">取消</string>
    <string name="permission_dlg_exit">退出</string>
    <string name="permission_dlg_request">申请</string>
    <string name="permission_dlg_setting">设置权限</string>
    <string name="permission_dlg_retry_title">权限申请不完全提醒</string>
    <string name="permission_dlg_retry_content">尙有权限没有授予，运行时可能会直接退出</string>
    <string name="permission_dlg_retry">重试</string>
    <string name="permission_dlg_enter">强行进入</string>
    <string name="setting">设置</string>
    <string name="clear_cache">清除缓存</string>
    <string name="faq">常见问题</string>
    <string name="feedback">意见反馈</string>
    <string name="about_xiaohui">关于校汇</string>
    <string name="logout">点我注销</string>
    <string name="verison_name">当前版本v%s</string>
    <string name="check_update">检查更新</string>
    <string name="user_agreement">用户服务协议</string>
    <string name="task_statement">任务声明</string>
    <string name="integral_statement">积分说明</string>
    <string name="dialog_comfirm">确定</string>
    <string name="go_download">前往下载</string>
    <string name="next_time">下次再说</string>
    <string name="newest_version">已是最新的版本</string>
    <string name="hint_feedback">让我们听到你的心声。。</string>
    <string name="feedback_contact_explain">请留下联系方式，以便我们和您取得联系(选填)</string>
    <string name="feedback_contact_method">QQ/邮箱/手机号码</string>
    <string name="comfirm">确定</string>
    <string name="logouting">注销中</string>
    <string name="hint_giveup_edit">是否放弃这次编辑？</string>
    <string name="dialog_giveup">放弃</string>
    <string name="commiting">提交中</string>
    <string name="clear_success">清除成功</string>
    <string name="hint_nickname">昵称</string>
    <string name="register">注册</string>
    <string name="has_account"><u>已有帐号</u></string>
    <string name="forget_password">忘记密码</string>
    <string name="hint_newpwd">新密码</string>
    <string name="find_pwd">找回密码</string>
    <string name="vercode">验证码</string>
    <string name="get_vercode">获取验证码</string>
    <string name="hint_oldpwd">旧密码</string>
    <string name="change_pwd">更换密码</string>
    <string name="change">更换</string>
    <string name="assn_activity">社团活动</string>
    <string name="assn_msg">%1$s人活跃 | %2$s个社团</string>
    <string name="hint_login_vercode">账号异常，请输入验证码</string>
    <string name="dialog_backfire">发生意外T_T</string>
    <string name="welcome_join">欢迎加入校汇</string>
    <string name="pwd_format_illegal">密码不支持特殊字符</string>
    <string name="pwd_length_illegal">密码长度必须6至16位</string>
    <string name="phone_format_illegal">手机号码格式不对</string>
    <string name="close_account">已被封闭帐号</string>
    <string name="login_info_error">手机号码或者密码错误</string>
    <string name="hint_register_statement">加入校汇表示你同意</string>
    <string name="hint_user_agreement"><u>用户服务协议</u></string>
    <string name="logining">登录中</string>
    <string name="h5pay_ing">正在处理中</string>
    <string name="h5pay_fail">订单支付失败</string>
    <string name="h5pay_dup">重复请求</string>
    <string name="h5pay_cancel">用户中途取消</string>
    <string name="h5pay_network_error">网络连接出错</string>
    <string name="h5pay_unknow">未知错误</string>
    <string name="mywallet">我的钱包</string>
    <string name="hint_money">账户余额（元）：</string>
    <string name="withdrawal">提现</string>
    <string name="wallet_detail">钱包明细</string>
    <string name="payaccount_info">账户信息</string>
    <string name="set_paypwd">设置支付密码</string>
    <string name="change_paypwd">修改支付密码</string>
    <string name="reset_paypwd">重设支付密码</string>
    <string name="wallet_statement">钱包说明</string>
    <string name="go_auth">你还未实名</string>
    <string name="authing">实名在路上，请等待</string>
    <string name="hint_withdrawal">到账支付宝账号：%s</string>
    <string name="withdrawal_money">提现金额</string>
    <string name="hint_withdrawal_careful">注：金额大于10元才可以提现</string>
    <string name="bind_alipay">绑定支付宝帐号</string>
    <string name="hint_alipay">支付宝账号</string>
    <string name="hint_alipayname">姓名</string>
    <string name="hint_alipayname_format">姓名:%s</string>
    <string name="bind">绑定</string>
    <string name="hint_newpaypwd">新支付密码</string>
    <string name="reset">重设</string>
    <string name="hint_again_input">再次输入</string>
    <string name="hint_paypwd">支付密码</string>
    <string name="hint_oldpaypwd">旧支付密码</string>
    <string name="alipay">支付宝</string>
    <string name="change_payaccount">更换支付宝帐号</string>
    <string name="myassn">我的社团</string>
    <string name="assn_join">加入社团</string>
    <string name="hint_input_name">请输入姓名</string>
    <string name="hint_input_pro">请输入专业</string>
    <string name="hint_input_phone">请输入手机号码</string>
    <string name="assn_cause">申请理由</string>
    <string name="assn_apply_join">申请加入</string>
    <string name="data_examine">资料审核</string>
    <string name="assn_nopass">不通过</string>
    <string name="assn_pass">通过</string>
    <string name="examine_list">社团成员审核</string>
    <string name="vercode_renew_get">重新获取（%s秒）</string>
    <string name="reseting">重设中</string>
    <string name="reset_success">重设成功</string>
    <string name="hint_input_paypwd">请输入支付密码</string>
    <string name="binding">绑定中</string>
    <string name="changing">更换中</string>
    <string name="payaccount">账户:%s</string>
    <string name="twotimes_input_error">两次输入不一致</string>
    <string name="loading_end_text">到底啦~</string>
    <string name="servicefee">服务费：%s</string>
    <string name="transactionid">交易编号：%s</string>
    <string name="registering">注册中</string>
    <string name="assn_activty_detail">活动详情</string>
    <string name="assnacti_place">地点：%s</string>
    <string name="assnactiv_end_time">结束时间：%s</string>
    <string name="assnactiv_viewnum">浏览：%s</string>
    <string name="assnlist_detail">%1$s人活跃 · %2$s个活动 · #%3$s#</string>
    <string name="hint_myassn">你造吗？\n 没有社团的大学不是完整的大学! \n快选择你钟意的组织，涌入他们的怀抱吧！</string>
    <string name="hint_btn_myassn">校园社团</string>
    <string name="assn">社团</string>
    <string name="assn_detail_join_assn">点我申请加入社团</string>
    <string name="loading">加载中</string>
    <string name="apply_success">申请成功</string>
    <string name="assn_member">社团人员</string>
    <string name="member">成员</string>
    <string name="president">会长</string>
    <string name="vice_president">副会长</string>
    <string name="call">呼叫</string>
    <string name="expel">踢出</string>
    <string name="set_manager">设置为管理员</string>
    <string name="set_member">降为成员</string>
    <string name="unable_call">无法调用电话界面</string>
    <string name="expel_success">踢出成功</string>
    <string name="assn_exit">退出社团</string>
    <string name="assn_about">关于社团</string>
    <string name="president_unable_exit">社长不能退出</string>
    <string name="ask_assn_exit">是否退出</string>
    <string name="exit_success">退出成功</string>
    <string name="no_intro">暂无简介</string>
    <string name="no_notice">暂无公告</string>
    <string name="ask_expel">是否踢出该成员</string>
    <string name="success">成功</string>
    <string name="edit">编辑</string>
    <string name="assnl_notice_publish">发布公告</string>
    <string name="publish">发布</string>
    <string name="publish_success">发布成功</string>
    <string name="assn_examine_none">暂无童鞋申请</string>
    <string name="mine_share">每日分享</string>
    <string name="hint_select_share_method">请选择你要分享的方式</string>
    <string name="qq_firend">QQ好友</string>
    <string name="hint_qrcode_download">通过扫描二维码即可直接下载校汇</string>
    <string name="hint_share">—壁咚图标，时刻分享—</string>
    <string name="weixin_quan">朋友圈</string>
    <string name="weixin_firend">微信好友</string>
    <string name="share_qq_title">校汇召唤你—一起玩赚校园</string>
    <string name="share_qq_img_url">http://xhplus.feibu.info/fb/images/logo.png</string>
    <string name="share_qq_target_url">http://feibu.info/download/download.html</string>
    <string name="share_qq_summary">先给自己定个小目标，比方说我先下载校汇</string>
    <string name="share_success">分享成功，赚得积分就是这么简单</string>
    <string name="wxapp_no_install">微信还未安装</string>
    <string name="myintergal">我的积分</string>
    <string name="change_campus">切换学校</string>
    <string name="hint_mine_name">名字读取中...</string>
    <string name="hint_loading">...</string>
    <string name="store_collection">店铺收藏</string>
    <string name="mytopic">我的校汇圈</string>
    <string name="mytask">我的任务</string>
    <string name="myorder">我的订单</string>
    <string name="hint_change_campus">陆续开通，敬请期待！</string>
    <string name="comming_soon">敬请期待</string>
    <string name="message">纸条</string>
    <string name="mytask_receive">我的接单</string>
    <string name="mytask_send">我的发单</string>
    <string name="hint_task_money">￥%s</string>
    <string name="task_state_new">未接单</string>
    <string name="task_state_finish">待结算</string>
    <string name="task_state_cancel">已取消</string>
    <string name="task_state_accepted">已接单</string>
    <string name="task_state_completed">已完成</string>
    <string name="task_step_new">发单</string>
    <string name="task_step_finish">完成</string>
    <string name="task_step_cancel">取消</string>
    <string name="task_step_accepted">接单</string>
    <string name="task_step_completed">结算</string>
    <string name="skip">跳过</string>
    <string name="hint_feedback_crash">上一次校汇闹脾气，不小心崩溃。尊贵的用户，能告诉我们它发生什么事了么，我们回去治治它。</string>
    <string name="assn_publish_activity">点我发布</string>
    <string name="assn_activity_publish">发布活动</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="place">地点</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="uploading">上传中</string>
    <string name="album">相册</string>
    <string name="camera">拍照</string>
    <string name="cancel">取消</string>
    <string name="report">举报</string>
    <string name="task_report">任务举报</string>
    <string name="hint_task_report">让我们知道发生了什么</string>
    <string name="report1">广告</string>
    <string name="report2">恶意刷单</string>
    <string name="report3">违法违纪任务</string>
    <string name="report4">其他情况</string>
</resources>