<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/headview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tool_bar_height"
        android:layout_marginTop="@dimen/status_bar_height"
        android:background="@color/light_blue">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:background="@drawable/btn_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/set_paypwd"
            android:textColor="@color/white"
            android:textSize="@dimen/font_most" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/hint_paypwd"
        android:textColor="@color/font_light"
        android:textSize="@dimen/font_normal" />

    <cn.flyexp.view.PasswordView
        android:id="@+id/edt_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_small"
        android:cursorVisible="false"
        android:inputType="number"
        android:maxLength="6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_normal"
        android:text="@string/hint_again_input"
        android:textColor="@color/font_light"
        android:textSize="@dimen/font_normal" />

    <cn.flyexp.view.PasswordView
        android:id="@+id/edt_pwd2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_small"
        android:cursorVisible="false"
        android:inputType="number"
        android:maxLength="6" />

    <Button
        android:id="@+id/btn_set"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_large"
        android:alpha="0.5"
        android:background="@drawable/btn_blue_round"
        android:enabled="false"
        android:text="@string/setting"
        android:textColor="@drawable/font_white_gray"
        android:textSize="@dimen/font_large" />


</LinearLayout>